k8s/auth-deployment.kub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nowhere-auth-deployment
  labels:
    app: nowhere-auth

spec:
  selector:
    matchLabels:
      app: nowhere-auth
  template:
    metadata:
      labels:
        app: nowhere-auth
    spec:
      containers:
        - name: nowhere-auth
          image: alisaleemhasan/nowhere-auth:1.0.2
          ports:
            - containerPort: 3001
              name: auth
            - containerPort: 50051
              name: grpc
