k8s/storage-deployment.kub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nowhere-storage-dep
  labels:
    app: nowhere-storage

spec:
  selector:
    matchLabels:
      app: nowhere-storage
  template:
    metadata:
      labels:
        app: nowhere-storage
    spec:
      containers:
        - name: nowhere-storage
          image: alisaleemhasan/nowhere-storage:1.0.1
          ports:
            - containerPort: 3002
              name: nowhere-storage
            - containerPort: 50051
              name: grpc
