k8s/auth-service-port.kub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nowhere-auth
  name: nowhere-auth-service
spec:
  type: NodePort
  ports:
    - name: 'nowhere-auth-service'
      port: 3001
      targetPort: 3001
      nodePort: 31001
  selector:
    app: nowhere-auth
