k8s/redis-service.kub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  type: ClusterIP
  ports:
    - name: 'redis-service'
      port: 6379
      targetPort: 6379
  selector:
    app: redis
