k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nowhere-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  rules:
    - http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: nowhere-snaps
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nowhere-gateway
                port:
                  number: 3005
